--- a/Martify/Views/Products.xaml
+++ b/Martify/Views/Products.xaml
@@ -20,27 +20,28 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="60"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Hàng tiêu đề -->
         <Grid Grid.Row="0">
-            <TextBlock Text="Quản lý sản phẩm" 
+            <!--TextBlock Text="Quản lý sản phẩm" 
                        FontSize="24" 
                        FontWeight="Bold"
                        VerticalAlignment="Center"
                        Margin="15,0,0,0"
-                       Foreground="{DynamicResource PrimaryText}"/>
+                       Foreground="{DynamicResource PrimaryText}"/-->
         </Grid>
 
         <!-- Hàng tìm kiếm và nút Thêm -->
         <Grid Grid.Row="1"
               VerticalAlignment="Center"
               Height="50"
-              Margin="0,5,0,5">
+              Margin="5">
 
             <Border Background="{DynamicResource CardBackground}"
-                    CornerRadius="5">
+                    CornerRadius="20">
             </Border>
 
             <!-- Biểu tượng tìm kiếm -->
@@ -54,20 +55,22 @@
                                      Foreground="{DynamicResource PrimaryText}"/>
 
             <!-- Ô tìm kiếm -->
-            <TextBox VerticalAlignment="Center"
-                     materialDesign:HintAssist.Hint="Tìm kiếm sản phẩm..."
-                     Margin="50,5,160,5"
-                     FontSize="16"
-                     Foreground="{DynamicResource PrimaryText}"
-                     BorderThickness="0"
-                     Background="Transparent"
-                     Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            <TextBox materialDesign:HintAssist.Hint="Tìm tên sản phẩm..."
+                 materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
+                 BorderThickness="0"
+                 VerticalAlignment="Center"
+                 Margin="40,0,10,0"
+                 FontSize="14"
+                 Foreground="{DynamicResource PrimaryText}"
+                 Text="{Binding Keyword, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
+
+        <Grid Grid.Row="2" Margin="5">
 
             <!-- Nút Thêm sản phẩm -->
             <Button HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Margin="0,0,10,0"
+                    Margin="0,0,20,0"
                     Height="40"
                     Padding="15,0,15,0"
                     Command="{Binding AddProductCommand}"
@@ -88,11 +91,13 @@
                 </StackPanel>
             </Button>
         </Grid>
-
         <!-- Hàng DataGrid -->
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="3" Margin="5" >
+            <Border Background="{DynamicResource CardBackground}"
+                      CornerRadius="25">
+            </Border>
             <DataGrid Background="{DynamicResource CardBackground}"
-                      Margin="0,5,0,0"
+                      Margin="10"
                       AutoGenerateColumns="False"
                       CanUserAddRows="False"
                       CanUserDeleteRows="False"
@@ -138,17 +143,8 @@
                     <!-- Cột Chọn (checkbox) -->
                     <DataGridCheckBoxColumn Width="80"
                                             EditingElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnEditingStyle}"
-                                            ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}"
-                                            Header="Chọn"
+                                            ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}" 
                                             Binding="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-
-                    <!-- Mã sản phẩm -->
-                    <DataGridTextColumn Width="80"
-                                        Binding="{Binding ProductID}"
-                                        EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                                        ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
-                                        Header="ID"
-                                        IsReadOnly="True"/>
 
                     <!-- Tên sản phẩm -->
                     <DataGridTextColumn Width="*"
@@ -157,10 +153,16 @@
                                         ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
                                         Header="Tên sản phẩm"
                                         Binding="{Binding ProductName, UpdateSourceTrigger=LostFocus}"/>
-
+                    <!-- Mã sản phẩm -->
+                    <DataGridTextColumn Width="80"
+                                        Binding="{Binding ProductID}"
+                                        EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
+                                        ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                                        Header="ID"
+                                        IsReadOnly="True"/>
                     <!-- Đơn vị -->
-                    <DataGridTextColumn Width="100"
-                                        Header="Đơn vị"
+                    <DataGridTextColumn Width="110"
+                                        Header="Đơn vị đo"
                                         EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"
                                         ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
                                         Binding="{Binding Unit, UpdateSourceTrigger=LostFocus}"/>
@@ -207,7 +209,7 @@
                     </DataGridTextColumn>
 
                     <!-- Cột Thao tác -->
-                    <DataGridTemplateColumn Width="120" Header="Thao tác">
+                    <DataGridTemplateColumn Width="120" Header="Công cụ">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" 
